Miscellaneous changes and bug fixes.