@@ -6,7 +6,7 @@
 
   <groupId>org.freixas.gamma</groupId>
   <artifactId>gamma</artifactId>
-  <version>alpha-0.1</version>
+  <version>1.0-SNAPSHOT</version>
 
   <name>Gamma</name>
   <description>A Minskowski spacetime diagram generator.</description>
@@ -18,6 +18,7 @@
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
     <skipTests>true</skipTests>
+    <vmArgs>--module-path "C:\Program Files\JavaFX\lib" --add-modules javafx.controls,javafx.fxml,javafx.media,javafx.swing,javafx.web</vmArgs>
   </properties>
 
   <dependencies>
@@ -58,6 +59,10 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <scm>
+      <developerConnection>scm:git:file//D:/Users/tony/Documents/Java/gamma/.git</developerConnection>
+  </scm>
 
   <build>
       <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
@@ -124,6 +129,11 @@
               <plugin>
                   <artifactId>maven-project-info-reports-plugin</artifactId>
                   <version>3.0.0</version>
+              </plugin>
+              <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-release-plugin</artifactId>
+                  <version>3.0.0-M5</version>
               </plugin>
           </plugins>
       </pluginManagement>
